# void-desk

./: .gitignore  AGENTS.md  Codemirror-new-stuffs.md  D&D-PROB.md  D&D.md  FUTURE-FEATURES.md  FUTURE-OPTIM.md  ISSUE.md  LSP-PLAN.md  LSP.md  Progress.md  README.md  Raman-worker.md  Remote-catalog-lsp.md  TERMINAL-INT-MYPLAN.md  VS-Code-Gap-Checklist.md  ai-chat-ui.html  cargo-check-result.txt  error-void.txt  error.txt  index.html  lsp-plan.md  note.md  package-lock.json  package.json  plan-2.md  plan-fix.md  plan.md  pnpm-lock.yaml  rating[do-not-read].txt  rebrand-mock.html  request_payload.txt  sidebar-mock.html  system-prompt-mashup.txt  task.md  todo.txt  tool-error.md  workspace-editor-suggestion.txt
.github/workflows/: main.yml
adk-rust-docs-examples/: adk-rust.md
feature-logs/: 2025-01-23.md  2025-01-24-inline.md  2025-01-24.md  2025-01-26.md  2025-01-27.md  2026-01-29.md  2026-02-07.md  2026-02-08.md  2026-03-11.md  2026-03-13.md  2026-03-25.md  2026-03-28-2.md  2026-03-28.md  README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: lsp-catalog.json
src-tauri/src/: lib.rs  main.rs  terminal.rs  tracing_setup.rs
src-tauri/src/commands/: ai_commands.rs  ai_debug.rs  ai_service.rs  ai_tools.rs  attachment_commands.rs  chat_storage.rs  codex_auth.rs  file_commands.rs  file_watcher.rs  lsp_commands.rs  lsp_runtime.rs  mod.rs  project_commands.rs  search_commands.rs  utils.rs  workspace_index.rs
src-tauri/src/lsp/: manager.rs  mod.rs  protocol.rs  transport.rs
src-tauri/src/sdk/: agent.rs  client.rs  mod.rs  session.rs
src-tauri/src/sdk/agent/: runtime.rs
src-tauri/src/sdk/core/: errors.rs  events.rs  mod.rs  types.rs
src-tauri/src/sdk/provider/: codex_subscription.rs  config.rs  mod.rs  openai_compatible.rs  registry.rs
src-tauri/src/sdk/stream/: mod.rs  parse.rs
src-tauri/src/sdk/tools/: mod.rs  registry.rs
src-tauri/src/sdk/transport/: http.rs  mod.rs
tmp-plans/: agent-improve.md  ai-chat-plan.md
ui-mock/: amp-sidebar.html  read_file_tool-indicator.html
(+45 files in other folders)
