[package]
name = "voidesk"
version = "0.1.0"
description = "High-performance AI IDE"
authors = ["VoiDesk Team"]
edition = "2021"

[lib]
name = "voidesk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
portable-pty = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# File watcher
notify = { version = "6", features = ["macos_fsevent"] }

# LSP support
lsp-types = "0.95"
bytes = "1.11.1"
